# llvmize

./: .ocamlformat  LICENSE.md  Makefile  README.md  dune-project  howto.md  notes.md
ocamlcfg/: dune  ocamlcfg.ml  ocamlcfg.mli
playground/: Makefile  t1.exe.cmir-cfg-sel  t1.exe.dump  t1.exe.startup.s  test.asm  test.ll  test1.cmi  test1.cmir-cfg-sel  test1.cmx  test1.cmx.dump  test1.ml  test1.s
src/: cli.ml  codegen.ml  dune  main.ml  main.mli
test/: dune  test1.ml  test2.ml
